# docs/swagger.json
@@ -138,7 +138,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.WriteSongTagsRequest"
+                            "$ref": "#/definitions/songloft_jsplugins-src_songloft-plugin-tag_internal_handlers.WriteSongTagsRequest"
                         }
                     }
                 ],
@@ -6062,35 +6062,6 @@
                 }
             }
         },
-        "handlers.WriteSongTagsRequest": {
-            "type": "object",
-            "properties": {
-                "album": {
-                    "type": "string"
-                },
-                "artist": {
-                    "type": "string"
-                },
-                "cover_data": {
-                    "type": "string"
-                },
-                "cover_url": {
-                    "type": "string"
-                },
-                "genre": {
-                    "type": "string"
-                },
-                "lyrics": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "year": {
-                    "type": "integer"
-                }
-            }
-        },
         "handlers.hlsProxySettingRequest": {
             "type": "object",
             "properties": {
@@ -7298,6 +7269,67 @@
                 "ScanStatusCancelling",
                 "ScanStatusCancelled"
             ]
+        },
+        "songloft_internal_handlers.WriteSongTagsRequest": {
+            "type": "object",
+            "properties": {
+                "album": {
+                    "type": "string"
+                },
+                "artist": {
+                    "type": "string"
+                },
+                "clear_cover": {
+                    "type": "boolean"
+                },
+                "cover_data": {
+                    "type": "string"
+                },
+                "cover_url": {
+                    "type": "string"
+                },
+                "genre": {
+                    "type": "string"
+                },
+                "lyrics": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "songloft_jsplugins-src_songloft-plugin-tag_internal_handlers.WriteSongTagsRequest": {
+            "type": "object",
+            "properties": {
+                "album": {
+                    "type": "string"
+                },
+                "artist": {
+                    "type": "string"
+                },
+                "cover_data": {
+                    "type": "string"
+                },
+                "cover_url": {
+                    "type": "string"
+                },
+                "genre": {
+                    "type": "string"
+                },
+                "lyrics": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
         },
         "source.HealthClass": {
             "type": "string",
